update renovate config

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,5 +4,9 @@
     "config:recommended"
   ],
   "bumpVersion": "patch",
-  "labels": ["dependencies"]
+  "labels": ["dependencies"],
+  "vulnerabilityAlerts": {
+    "labels": ["security"],
+    "enabled": true
+  }
 }
