update renovate config

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,6 +4,7 @@
     "config:recommended"
   ],
   "rangeStrategy": "bump",
+  "prHourlyLimit": 0,
   "labels": ["dependencies"],
   "vulnerabilityAlerts": {
     "labels": ["security"],
